appId: host.exp.exponent
---
- launchApp
- tapOn: "mobile-app"
- assertVisible:
    id: "welcome-register-button"
- tapOn:
    id: "welcome-register-button"
- assertVisible:
    id: "register-name-input"
- tapOn:
    id: "register-name-input"
- inputText: "Mariia20"
- tapOn:
    id: "register-email-input"
- inputText: "mariia20@test.com"
- tapOn:
    id: "register-password-input"
- inputText: "12345678"
- hideKeyboard
- scrollUntilVisible:
    element:
      id: "register-confirm-password-input"
    direction: DOWN
- tapOn:
    id: "register-confirm-password-input"
- inputText: "12345678"
- hideKeyboard
- tapOn:
    id: "register-submit-button"
- assertVisible:
    text: "Welcome back"